[tool.poetry]
name = "ccclub-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ccclub_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
